--- a/src/app/wallet/wallet.component.html
+++ b/src/app/wallet/wallet.component.html
@@ -37,6 +37,7 @@
     <h4 class="mb-4">Your Ballot Wallet</h4>
     <p class="mb-4">This is your address: {{ wallet.address }}</p>
     <p class="mb-4">The token contract is: {{ tokenContractAddress }}</p>
+    <p class="mb-4">The ballot contract is: {{ ballotContractAddress }}</p>
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
       <div class="card col p-2 m-2 text-secondary px-3">
         <p>Ether Balance: {{ etherBalance }}</p>
@@ -50,22 +51,31 @@
     </div>
   </div>
   <!-- TODO: add div showing proposals, proposals vote count -->
-  <div *ngIf="wallet" class="col p-2 m-2 text-secondary px-3">
-    <input
-      #voteId
-      type="number"
-      min="0"
-      [max]="votePower"
-      placeholder="0"
-      class="py-3"
-    />
-    <button
-      class="btn btn-sm btn-secondary px-4 fs-5 border-black bg-black mx-2 text-white"
-      type="button"
-      (click)="vote(voteId.value)"
-    >
-      Vote
-    </button>
+  <div *ngIf="wallet && votePower > 0" class="d-grid gap-2 d-sm-flex justify-content-center my-4">
+    <div class="col">
+      <p>Choose a Vote proposal:</p>
+      <input
+        #voteId
+        type="number"
+        min="0"
+        max="3"
+        placeholder="0"
+      />
+    </div>
+    <div class="col">
+      <p>Choose vote power:</p>
+      <input #votePower type="number" min="0" placeholder="votePower" />
+    </div>
+    <div class="col">
+      <p></p>
+      <button
+        class="btn btn-sm btn-secondary px-4 fs-5 border-black bg-black mx-2 text-white"
+        type="button"
+        (click)="vote(voteId.value, votePower.value)"
+      >
+        Vote
+      </button>
+    </div>
   </div>
   <div *ngIf="wallet" class="col p-2 m-2 text-secondary px-3">
     <input #tokenId type="number" min="0" placeholder="0" class="py-3" />
@@ -77,7 +87,10 @@
       Request Tokens
     </button>
   </div>
-  <div *ngIf="wallet" class="col p-2 m-2 text-secondary px-3">
+  <div
+    *ngIf="wallet && etherBalance > 0"
+    class="col p-2 m-2 text-secondary px-3"
+  >
     <button
       class="btn btn-sm btn-secondary px-4 fs-5 border-black bg-black mx-2 text-white"
       type="button"
